cdebconf (0.132) UNRELEASED; urgency=low

  * Add a separate queue for noninteractive questions, so that things can
    be done when these questions would be displayed. This is a bit hackish;
    debconf's method of letting questions determine if they are interactive or
    not is really better. But this doesn't need huge changes to cdebconf.
  * Handle the special case of a noninteractive select with no (or a bad)
    default the same as debconf does; when such a question is asked,
    set the value to the first item in the select list. 
    Closes: #486892, #247744

 -- Joey Hess <joeyh@debian.org>  Thu, 19 Jun 2008 17:18:08 -0400

cdebconf (0.131) unstable; urgency=low

  [ Frans Pop ]
  * gtk frontend: remove special handling for countrychooser/country-name as
    that template no longer exists. Requires: localechooser (>= 2.02).

  [ Max Vozeler ]
  * Fix *_can_align() function signatures to match the prototype.
  * Adapt ncurses, slang and bogl frontends to API changes made in 
    cdebconf 0.129 - q_get_*() and question_get_value().

  [ Jérémy Bobbio ]
  * In the GTK+ frontend, the "Go Back" button is now created before calling
    question handlers.  This allow the button ordering to stay coherent when
    plugins define custom buttons.

  [ Updated translations ]
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Marathi (mr.po) by Sampada
  * Panjabi (pa.po) by Amanpreet Singh Alam

 -- Frans Pop <fjp@debian.org>  Mon, 12 May 2008 14:56:36 +0200

cdebconf (0.130) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Do not include strutl.h in frontend.h as it is not needed.
    (Closes: #475975)
  * Ship strutl.h in libdebconfclient0-dev for cdebconf plugins using those
    functions.

 -- Jérémy Bobbio <lunar@debian.org>  Mon, 14 Apr 2008 23:04:28 +0200

cdebconf (0.129) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Add support for "directives" in templates: those are special variables in