@@ -1,5 +1,6 @@
 cdebconf (0.132) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Add a separate queue for noninteractive questions, so that things can
     be done when these questions would be displayed. This is a bit hackish;
     debconf's method of letting questions determine if they are interactive or
@@ -9,7 +10,12 @@ cdebconf (0.132) UNRELEASED; urgency=low
     set the value to the first item in the select list. 
     Closes: #486892, #247744
 
- -- Joey Hess <joeyh@debian.org>  Thu, 19 Jun 2008 17:18:08 -0400
+  [ Frans Pop ]
+  * Apply patch from Samuel Thibault to improve dark theme in newt frontend
+    and add support for a dark theme in the text frontend if used with
+    "linux" or "bterm" consoles. Closes: #488494.
+
+ -- Frans Pop <fjp@debian.org>  Sun, 29 Jun 2008 18:17:47 +0200
 
 cdebconf (0.131) unstable; urgency=low
 
